css/src/header.scss
#header {
    @include main-section-shadow;
    width: 100%; margin: 0 auto; padding-bottom: .5rem;
    text-align: center;
    @include linear-gradient(45deg, $color-aspect 0%, $color-aspect-sub 100%);
    
    
    
    /* LOGO */
    
    .highlight {
        display: inline-block; position: relative;
        max-width: $content-width + 150; width: 100%; padding: $header-padding;
        text-align: left;
    
        .logo {
            display: inline-block;

            .link {
                display: inline-block;
                margin-right: .3em; padding: .5rem;
                font-size: 5rem; line-height: 1em; color: $color-main; text-decoration: none; font-weight: bold;
                @include user-select(none);

                span {
                    display: inline-block;
                    margin-left: .1em; padding: .1em .15em;
                    background-color: $color-main; border: .5rem solid $color-main;
                    color: $color-aspect;
                    @include border-radius(.3rem);
                }

                &:hover,
                &:focus {
                    text-decoration: none;

                    span {
                        background-color: transparent;
                        color: $color-main;
                    }
                }
            }

            .text {
                display: inline-block;
                padding: .5rem;
                font-size: 1.8rem; line-height: 1em; color: $color-main;
            }
        }


        
        .right-menu {
            float: right;
            margin: 1rem 0 0 4rem;
            
            @include ON_MOBILE {
                position: absolute; top: 50%; right: $header-padding;
                margin: 0;
                @include transform(translate(0, -50%));
            }
            
            > * {
                display: inline-block; vertical-align: middle;
            }

            .language-selection {
                list-style: none;
                text-align: left;

                @include ON_MOBILE {
                    display: none;
                }

                > li {
                    display: inline-block;
                    margin: 0 .7rem .3rem .7rem;
                    font-size: 1.8rem;

                    &:first-child {
                        margin-left: 0;
                    }

                    &:last-child {
                        margin-right: 0;
                    }

                    .lang-select-btn {
                        min-width: 12rem; padding: .5rem 1rem;
                        border: .3rem solid transparent;
                        font-size: 2.2rem; font-weight: normal; text-align: center;
                        @include border-radius(.3rem);

                        &:hover,
                        &:focus {
                            border-color: $color-main;
                        }

                        html[lang="de"] &[set-lang="de"],
                        html[lang="en"] &[set-lang="en"] {
                            background-color: $color-main; cursor: auto;
                            color: $color-aspect; font-weight: bold;

                            &:hover,
                            &:focus {
                                outline: none;
                            }
                        }
                    }
                }
            }

            #open-search-btn {
                margin-left: 5rem; padding: 1rem;
                border: .3rem solid transparent;
                font-size: 0; line-height: 1em;
                @include border-radius(.3rem);
                
                @include ON_MOBILE {
                    margin: 0 3rem 0 0;
                }
                
                @include ON_DESKTOP {
                    &:hover,
                    &:focus {
                        border-color: $color-main;
                    }
                }
                
                > * {
                    text-align: center;
                    font-size: 0;
                    
                    &:before {
                        font-size: 4rem; line-height: 1em; color: $color-main;
                    }
                }
            }

            #mobile-hamburger-btn {
                position: relative;
                width: 8rem; height: 8rem;

                @include ON_DESKTOP {
                    display: none;
                }

                > * {
                    position: absolute; left: 10%;
                    width: 80%; height: 8%;
                    background-color: $color-main;
                    @include border-radius(8rem);
                    @include transform-origin(center);
                    @include transition(.3s);
                }

                .top {top: 20%;}
                .middle {bottom: 46%;}
                .bottom {bottom: 20%;}

                html.nav-is-open & {

                    .top {
                        top: 46%;
                        @include transform(rotate(45deg));
                    }
                    .middle {
                        opacity: 0;
                    }
                    .bottom {
                        bottom: 46%;
                        @include transform(rotate(-45deg));
                    }
                }
            }
        }
    }
    
    
    
    /* BANNER */
    
    .banner {
        @include main-section-shadow;
        display: inline-block;
        max-width: 1920px; width: 100%; height: 30rem;
        background-position: center; background-repeat: no-repeat;
        @include background-size(cover);
        
        @include ON_MOBILE {
            display: none;
        }
    }
}
/* ... */

